tar (1.30+dfsg-3) UNRELEASED; urgency=medium

  * elide reference to non-existent section 5 page from section 1 tar manpage,
    closes: #846490

 -- Bdale Garbee <bdale@gag.com>  Wed, 16 May 2018 11:54:07 -0600

tar (1.30+dfsg-2) unstable; urgency=medium

  * updated pristine-tar patch from Antonio Terceiro, making it possible for
    pristine-tar to ask tar to recreate pre-1.30 broken behavior so that it's
    possible to recover a tar file stored in a repo in the old, broken format.
    closes: #897653
  * patch from upstream that fixes race condition in dirrem01 and dirrem02
    tests when building on a slow machine, closes: #897591

 -- Bdale Garbee <bdale@gag.com>  Wed, 16 May 2018 01:47:48 -0600

tar (1.30+dfsg-1) unstable; urgency=medium

  * new upstream version
  * update Vcs entries for move of packaging repo to salsa.debian.org
  * add depends/conflicts tar version details to tar-scripts, closes: #865428

 -- Bdale Garbee <bdale@gag.com>  Sun, 29 Apr 2018 12:39:42 -0600

tar (1.29b-2) unstable; urgency=medium

  * add suggests tar-doc, closes: #856958
  * increase test suite verbosity and dump test results into build log on 
    make check failure for kfreebsd team
  * move primary git repo to collab-maint

 -- Bdale Garbee <bdale@gag.com>  Fri, 21 Jul 2017 08:35:22 -0600

tar (1.29b-1.1) unstable; urgency=medium

  * Non-maintainer upload.
  * CVE-2016-6321: Bypassing the extract path name.
    When extracting, member names containing '..' components are skipped.
    (Closes: #842339)

 -- Salvatore Bonaccorso <carnil@debian.org>  Sun, 30 Oct 2016 07:35:31 +0100

tar (1.29b-1) unstable; urgency=medium

  * re-constitute the 1.29 orig.tar with man pages as version 1.29b
  * re-enable parallel builds and increase build verbosity, closes: #824631
  * switch to man pages provided by upstream since 1.28, closes: #827017, 
    #391714, #473228, #524819, #711725, #720877, #766016, #779795.

 -- Bdale Garbee <bdale@gag.com>  Fri, 22 Jul 2016 13:13:55 -0600
