@@ -1,8 +1,0 @@
-#!/bin/sh
-#
-# This is not a mistake.  This shell script (/etc/rmt) has been provided
-# for compatibility with other Unix-like systems, some of which have
-# utilities that expect to find (and execute) rmt in the /etc directory
-# on remote systems.
-#
-exec /usr/sbin/rmt
