@@ -1,10 +1,0 @@
-tar (1.15.91-2) unstable; urgency=low
-
-  * Upstream changed the default behavior of tar regarding wildcards in
-    filenames.  You may need to add the new '--wildcards' option to scripts
-    using tar if you depend on the old, undocumented behavior.  See the tar
-    documentation (the wildcards menu item in the non-free package 'tar-doc', 
-    or http://www.gnu.org/software/tar/manual/html_node/wildcards.html)
-    for more detailed information.
-
- -- Bdale Garbee <bdale@gag.com>  Wed, 28 Jun 2006 23:30:23 -0400
